[added] grid container style

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+#gridContainer {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  padding: 10px;
+}
+
+.gridItem {
+  text-transform: capitalize;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+}
