--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,22 @@
   pointer-events: none;
 }
 
+body {
+  background-color: rgba(34,34,36, 1);
+}
+
+h1 {
+  color: rgba(238,21,21, 1);
+}
+
+a {
+  color: rgba(238,21,21, 1);
+}
+
+a:hover {
+  color: rgba(240,240,240, 1);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -41,10 +57,11 @@
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   padding: 10px;
+  border: 1px solid rgba(240,240,240, 0.8);
 }
 
 .gridItem {
   text-transform: capitalize;
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid rgba(240,240,240, 0.8);
   padding: 20px;
 }
