--- a/src/App.css
+++ b/src/App.css
@@ -9,22 +9,13 @@
   height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 body {
   background-color: rgba(34,34,36, 1);
   height: 100%;
   justify-content: center;
 }
 
-h1 {
-  color: rgba(238,21,21, 1);
-}
-
-a {
+h1, a {
   color: rgba(238,21,21, 1);
 }
 
