--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,19 @@
   height: 100%;
 }
 
-body {
-  background-color: rgba(34,34,36, 1);
-  height: 100%;
-  justify-content: center;
-}
+/*body {*/
+/*  background-color: rgba(34,34,36, 1);*/
+/*  height: 100%;*/
+/*  justify-content: center;*/
+/*}*/
 
-h1, a {
-  color: rgba(238,21,21, 1);
-}
+/*h1, a {*/
+/*  color: rgba(238,21,21, 1);*/
+/*}*/
 
-a:hover {
-  color: rgba(240,240,240, 1);
-}
+/*a:hover {*/
+/*  color: rgba(240,240,240, 1);*/
+/*}*/
 
 .App-header {
   background-color: #282c34;
